# m1-ml-book-flow-api

./: .dockerignore  .gitignore  Dockerfile  HEROKU_DOCKER.md  README.md  docker-compose.yml  heroku.yml  pyproject.toml  secrets.toml  start.sh
.devcontainer/: devcontainer.json
dashboards/: Procfile  api_dashboards.py  requirements.txt
m1_ml_book_flow_api/: __init__.py  main.py
m1_ml_book_flow_api/api/models/: Auth.py  Book.py  BookDetails.py  HealthResponse.py  MLFeatures.py  MLPredictions.py  MLTrainingData.py  RefreshToken.py  StatsCategories.py  StatsOverview.py  TopRatedBook.py  __init__.py
m1_ml_book_flow_api/api/repositories/: __init__.py  auth_repository.py  books_repository.py  categories_repository.py  health_repository.py  scraping_repository.py  stats_categories_repository.py  stats_overview_repository.py  top_rating_repository.py
m1_ml_book_flow_api/api/routes/: __init__.py  auth.py  books.py  categories.py  dashboard.py  health.py  ml.py  scraping.py  stats_categories.py  stats_overview.py  top_rating.py
m1_ml_book_flow_api/api/services/: __init__.py  auth_service.py  books_service.py  categories_service.py  health_service.py  ml_service.py  scraping_service.py  scraping_trigger_service.py  stats_categories_service.py  stats_overview_service.py  top_rating_service.py
m1_ml_book_flow_api/core/: __init__.py  database.py  errors.py  exceptions.py  handlers.py  logger.py  middleware.py  models.py
m1_ml_book_flow_api/core/security/: __init__.py  jwt.py  security.py
nginx/: nginx.conf
tests/: conftest.py  test_books.py
