[tool.poetry]
name = "m1-ml-book-flow-api"
version = "0.1.0"
description = "API pública desenvolvida como projeto da Pós Tech em Machine Learning da FIAP. Fornece dados de livros processados para sistemas de recomendação e análise, integrando etapas de extração, transformação e disponibilização. Projetada com foco em escalabilidade, modularidade e reuso em modelos de aprendizado de máquina."
authors = [
    "Marilise Morona <marymorona@gmail.com>",
    "Edi Vergis <evergis.ti@gmail.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.119.1,<0.120.0"
uvicorn = ">=0.38.0,<0.39.0"
requests = ">=2.32.5,<3.0.0"
pandas = ">=2.3.3,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
pyjwt = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-json-logger = "^4.0.0"
streamlit = "^1.50.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
httpx = ">=0.28.1,<0.29.0"
pytest-mock = ">=3.15.1,<4.0.0"
notebook = "^7.4.7"
jupyter = "^1.1.1"
ipykernel = "^7.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [
    { include = "m1_ml_book_flow_api" }
]